--- a/app/views/rooms/_top_nav.html.haml
+++ b/app/views/rooms/_top_nav.html.haml
@@ -1,7 +1,7 @@
 .TopNav
   .Left
     .Left__userBox
-      %h6 ログイン中のユーザー
+      %h6 ログイン中の学校
       .Left__userBox__userName 
         = current_school.school_admin
     .Left__logOutBox
