--- a/app/assets/stylesheets/modules/_letters.scss
+++ b/app/assets/stylesheets/modules/_letters.scss
@@ -79,7 +79,7 @@
 // new view's scss
 .Wall {
   padding-top: 30px;
-  background-color: white;
+  background-color: #dddddd;
   width: 100%;
   display: flex;
   justify-content: center;
@@ -89,34 +89,68 @@
     justify-content: flex-start;
     align-items: center;
     flex-direction: column;
-    padding: 10px 0 0 50px ;
+    padding: 10px 0 0 10px ;
     .head {
       font-size: 30px;
+      margin-bottom: 20px;
     }
     .FormField {
-      width: 650px;
-      padding: 10px 50px;
+      width: 530px;
+      padding: 10px 20px;
       border: 1px solid black;
-      &__labelReleased_at,
-      &__labelName,
-      &__labelPdf {
-        font-size: 30px;
-      }
       &__inputReleased_at,
       &__inputName,
       &__inputPdf {
         height: 50px;
         font-size: 30px;
-        margin: 10px 0 0 40px;
+        margin: 10px 0 15px 20px;
+        #letter_released_at_1i,
+        #letter_released_at_2i,
+        #letter_released_at_3i {
+          height: 50px;
+          width: 129px;
+          color: #333;
+          border: 2px solid #cccccc;
+          border-radius: 3px;
+          background-color: #fff;
+          padding-left: 5px;
+        }
+        #letter_name {
+          height: 50px;
+          width: 400px;
+          color: #333;
+          border: 2px solid #cccccc;
+          border-radius: 3px;
+          background-color: #fff;
+          padding-left: 5px;
+        }
+        #letter_pdf {
+          font-size: 16px;
+        }
       }
       &__submit {
-        font-size: 40px;
-        margin: 60px 0 0 80px;
-      }
-      .submit-btn {
-  
+        margin: 50px 0 30px 170px;
+        .submit-btn {
+          height: 40px;
+          width: 150px;
+          color: #fff;
+          border: 2px solid #cccccc;
+          border-radius: 3px;
+          background-color: #aaaaaa;
+          padding-left: 5px;
+        }
       }
     }
   }
 }
 
+#file-upload-button {
+  display: block;
+  height: 40px;
+  width: 500px;
+  color: #fff;
+  border: 2px solid #cccccc;
+  border-radius: 3px;
+  background-color: #aaaaaa;
+  padding-left: 5px;
+}
