--- a/app/views/letters/new.html.haml
+++ b/app/views/letters/new.html.haml
@@ -1,7 +1,7 @@
 .wrapper
   .Wall
     .letterField
-      %p.head "配布手紙アップロードフォーム"
+      %p.head 配布手紙アップロードフォーム
       =form_with model: [@room, @letter], method: :post, local: true do |f|
         .FormField
           .FormField__labelReleased_at
