--- a/app/views/rooms/control.html.haml
+++ b/app/views/rooms/control.html.haml
@@ -1,23 +1,5 @@
 .SchoolWrapper
-  .TopNav
-    .Left
-      .Left__userBox
-        %h6 ログイン中のユーザー
-        .Left__userBox__userName 
-          = current_school.school_admin
-      .Left__logOutBox
-        = link_to 'schoolLogOut', destroy_school_session_path, method: :delete, class: "logOutBtn"
-    .Right  
-      .Right__infoHead
-        .Right__infoHead__userschool
-          %h6 学校名
-          .Right__infoHead__userschool__schoolName
-            = current_school.school_name
-        .Right__infoHead__headBox
-      .Right__infoMenu
-        %ul.breadCrumbsLink
-          %li
-            クラスを登録します
+  = render partial: "/rooms/top_nav"
   .MainNav
     .MainNav__Wrapper
       %ul.roomsRegistration
@@ -36,5 +18,5 @@
         %li.roomRegistration
           = link_to 'その他教室登録', new7_rooms_path, class: "roomSelectLink"
         %li.roomRegistration
-          = link_to '登録確認・編集', confirm_rooms_path, class: "roomSelectLink"
+          = link_to 'ユーザー一覧・削除', confirm_rooms_path, class: "roomSelectLink"
       = link_to '戻る', schools_path, class: "backLink"
