--- a/app/views/schools/shared/_links.html.haml
+++ b/app/views/schools/shared/_links.html.haml
@@ -1,8 +1,8 @@
 - if controller_name != 'sessions'
-  = link_to "ログイン画面はこちら", new_session_path(resource_name)
+  = link_to "ログインはこちら", new_session_path(resource_name)
   %br/
 - if devise_mapping.registerable? && controller_name != 'registrations'
-  = link_to "登録画面はこちら", new_registration_path(resource_name)
+  = link_to "新規登録はこちら", new_registration_path(resource_name)
   %br/
 - if devise_mapping.recoverable? && controller_name != 'passwords' && controller_name != 'registrations'
   = link_to "パスワードをお忘れですか?", new_password_path(resource_name)
