--- a/app/views/rooms/index.html.haml
+++ b/app/views/rooms/index.html.haml
@@ -1,4 +1,5 @@
 -# rooms#index
 .wrapper
- = render 'contact_books/side-bar'
- = render 'rooms/room_contents_index'
+  - if !current_user.room_id?
+    = render 'contact_books/side-bar'
+  = render 'rooms/room_contents_index'
