--- a/app/assets/stylesheets/modules/_contact_books.scss
+++ b/app/assets/stylesheets/modules/_contact_books.scss
@@ -134,6 +134,14 @@ footer {
       overflow-y: scroll;
       .RoomIndex {
         padding: 10px 0;
+        .userRoomRegistration {
+          display: flex;
+          align-items: center;
+          flex-direction: column;
+          a {
+            margin-top: 15px;
+          }
+        }
         ul {
           display: flex;
           justify-content: center;
