--- a/app/views/devise/registrations/new.html.haml
+++ b/app/views/devise/registrations/new.html.haml
@@ -7,7 +7,7 @@
         .field
           = f.label :学校名
           %br/
-          = f.collection_select :school_id, School.all.collect, :id, :id, { include_blank: "選択してください"}
+          = f.collection_select :school_id, School.all, :id, :school_name, { include_blank: true}
         .field
           = f.label :保護者名
           %br/
