--- a/app/views/rooms/_room_contents_index.html.haml
+++ b/app/views/rooms/_room_contents_index.html.haml
@@ -7,9 +7,12 @@
     .infoArea__infoHead__userRoom
       %h6 選択中のクラス
       .infoArea__infoHead__userRoom__roomName
-        未選択
+        - if current_user.room_id?
+          = current_user.room.number
+        - else
+          クラス登録が必要です
     .infoArea__infoHead__headBox
   .infoArea__infoMenu
     %ul.breadCrumbsLink
       %li
-        サイドバーからクラスを選んでください
+        サイドバーからクラスを登録して下さい
