--- a/app/views/rooms/_roomRegistrationExplanation.html.haml
+++ b/app/views/rooms/_roomRegistrationExplanation.html.haml
@@ -4,16 +4,16 @@
     .fieldsExample
       .fieldExample
         = f.label :登録, class: "label"
-        = f.select :school_id, {"#{current_school.school_name}": current_school.id}, { include_blank: true}
+        = f.select :school_id, {"#{current_school.school_name}": current_school.id}, { include_blank: current_school.school_name}
         .explanation
           ⬅︎登録する場合は学校を必ず選んでください
       .fieldExample
         = f.label :学年, class: "label"
-        = f.number_field :grade
+        = f.number_field :grade, value: 1
         .explanation
           ⬅︎登録する場合は学年を必ず選択してください
       .fieldExample
         = f.label :クラス名, class: "label"
-        = f.text_field :number
+        = f.text_field :number, value: "１−１"
         .explanation
           ⬅︎必ず学年と組を両方書いてください。例）１−１、１年１組
