--- a/app/views/rooms/_roomRegistrationExplanation.html.haml
+++ b/app/views/rooms/_roomRegistrationExplanation.html.haml
@@ -1,5 +1,7 @@
 %p.guideline-explanation
   例
+  %p.explanation
+    ※１度に登録できるのは最大１5件です。それ以上必要な場合は登録を繰り返してください。
   = form_with do |f|
     .fieldsExample
       .fieldExample
