--- a/app/views/rooms/new.html.haml
+++ b/app/views/rooms/new.html.haml
@@ -3,7 +3,7 @@
   .MainNav
     .MainNav__Wrapper
       .MainNav__Wrapper__head
-        クラス登録１年
+        クラス登録
       = render partial: "/rooms/roomRegistrationExplanation"
       .MainNav__Wrapper__form
         = render partial: "/rooms/room_collection_form"
