--- a/app/assets/stylesheets/modules/_rooms.scss
+++ b/app/assets/stylesheets/modules/_rooms.scss
@@ -100,6 +100,7 @@ a:hover {
   justify-content: center;
   align-items: center;
   flex-direction: column;
+  padding-top: 100px;
   .roomRegistration {
     .roomSelectLink {
       display: block;
