--- a/app/views/rooms/_room_collection_form.html.haml
+++ b/app/views/rooms/_room_collection_form.html.haml
@@ -1,4 +1,4 @@
-= form_for @rooms, url: create_new1_rooms_path do |form|
+= form_for @rooms, url: rooms_path do |form|
   - @rooms.collection.each do |room|
     = fields_for 'rooms[]', room do |field|
       .fields
