guest login button added

--- a/app/assets/stylesheets/modules/_contact_books.scss
+++ b/app/assets/stylesheets/modules/_contact_books.scss
@@ -46,14 +46,14 @@ body {
 // application'scss
 header {
   height:80px;
-  background-color: ghostwhite;
+  background-color: #dddddd;
   border-top: 1px solid darkgray;
   border-bottom: 1px solid forestgreen;
   text-align: center;
   .fas.fa-book-open {
     color: forestgreen;
     font-size: 30px;
-    background-color: ghostwhite;
+    background-color: #dddddd;
   }
   h2 {
     display: inline-block;
