--- a/app/views/contact_books/_headButtonLinks.html.haml
+++ b/app/views/contact_books/_headButtonLinks.html.haml
@@ -1,6 +1,6 @@
 .infoArea__infoHead
   .infoArea__infoHead__userRoom
-    %h6 選択中のクラス
+    %h6 あなたのクラス
     .infoArea__infoHead__userRoom__roomName
       = @room.number
   .infoArea__infoHead__headBox
