--- a/app/views/rooms/_room_contents_show.html.haml
+++ b/app/views/rooms/_room_contents_show.html.haml
@@ -5,7 +5,7 @@
       .infoArea__infoHead__userschool__schoolName
         = current_user.school.school_name
     .infoArea__infoHead__userRoom
-      %h6 選択中のクラス
+      %h6 あなたのクラス
       .infoArea__infoHead__userRoom__roomName
         = @room.number
     .infoArea__infoHead__headBox
