--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -3,8 +3,10 @@
 @import "font-awesome";
 @import "modules/contact_books";
 @import "modules/letters";
-@import "modules/absent_contacts";
+@import "modules/absent_contacts.scss";
 @import "modules/devise";
 @import "modules/flash";
 @import "modules/schools";
 @import "modules/rooms";
+@import "modules/_smart_phone";
+@import "modules/_header-footer";
