view for smartphone: registration

--- a/app/assets/stylesheets/modules/_devise.scss
+++ b/app/assets/stylesheets/modules/_devise.scss
@@ -56,6 +56,11 @@
     top: 2px;
   }
 
+  .sp-check {
+    display: none;
+    width: 400px;
+  }
+
   .UserWrapper {
     height: calc( 100vh - 115px );
     overflow: hidden;
