--- a/app/views/devise/registrations/new.html.haml
+++ b/app/views/devise/registrations/new.html.haml
@@ -34,6 +34,7 @@
         .actions
           = f.submit "登録する", class: "submitBtn"
       = render 'devise/sessions/sample-parent-login.html.haml'
-      = render 'devise/sessions/sample-teacher-login.html.haml'
+      .sp-check
+        = render 'devise/sessions/sample-teacher-login.html.haml'
       %br/
       = render "devise/shared/links"
