--- a/app/views/devise/registrations/new2.html.haml
+++ b/app/views/devise/registrations/new2.html.haml
@@ -1,7 +1,8 @@
 .UserWrapper
   .wall
     .FormBox
-      %p ユーザー登録　クラス選択
+      %p ユーザー登録
+      %p クラス選択
       = form_for @user, url: users_registrations_room_select_path(@user), method: :patch do |f|
         .field
           = f.hidden_field :school_id, value: "#{current_user.school_id}", readonly:true
