--- a/app/assets/stylesheets/modules/_absent_contacts.scss
+++ b/app/assets/stylesheets/modules/_absent_contacts.scss
@@ -113,9 +113,14 @@
 
 
 .infoArea {
+  width: calc( 100% - 150px );
   &__AbsentContact {
+    height:calc(100% - 130px);
+    background-color: #dddddd;
+    overflow: hidden;
+    overflow-y: scroll;
+    padding: 50px 0 0 50px;
     &__contactsHistory {
-      padding: 40px 40px;
       &__title {
         @include headline;
       }
@@ -170,13 +175,20 @@
         @include headline;
       }
       &__TodayAbsentContact {
-        margin-bottom: 80px;
+        height: 100px !important;
         @include AbsentContactBox_and_Table;
       }
       &__title {
           @include headline;
       }
       &__index {
+        height: 300px;
+        background-color: #dddddd;
+        overflow: hidden;
+        overflow-y: scroll;
+        @include AbsentContactBox_and_Table;
+      }
+      &__todayindex {
         margin-bottom: 80px;
         @include AbsentContactBox_and_Table;
       }
