--- a/app/assets/stylesheets/modules/_contact_books.scss
+++ b/app/assets/stylesheets/modules/_contact_books.scss
@@ -292,21 +292,30 @@
             display: flex;
             flex-wrap: wrap;
               .cb {
+                display: flex;
                 height: 16px;
+                width: 230px;
+
                 margin: 5px 0;
                 padding-right: 20px;
                 .cbLink {
-                color: black;
-                font-size: 18px;
-                text-decoration: none;
+                  display: block;
+                  width: 150px;
+                  color: black;
+                  font-size: 18px;
+                  text-align: end;
+                  text-decoration: none;
+                  margin-right: 10px;
                 }
                 .cbLink:hover {
-                  border-bottom: 2px solid black;
+                  color: #aaaaaa;
                 }
                 .contact_edit_delete_btn {
-                  display: inline-block;
+                  width: 60px;
                   line-height: 26px;
                   margin-right:20px;
+                  display: flex;
+                  justify-content: space-between;
                   .EditBtn,
                   .DeleteBtn {
                   color: black;
