--- a/app/views/contact_books/_contactBook_contents_index.haml
+++ b/app/views/contact_books/_contactBook_contents_index.haml
@@ -18,13 +18,7 @@
       .infoArea__infoContent__todayContactBook__todayContactBookTitle
         本日の連絡帳
       .infoArea__infoContent__todayContactBook__TodayContactBook
-        - if !@today_contact_book.present?
-          %i.fa.fa-hammer
-          .makingMessage ただいま作成中です
-          %i.fa.fa-hammer
-        - else
-          =render partial: "today_contact_book", collection: @today_contact_book
-
+        = render partial: 'today_contact_book'
 
     - if current_user && current_user.admin?
       .infoArea__infoContent__historyContactBookTitle
