refatoring absent-contact

--- a/app/views/absent_contacts/_absentContact_contents.html.haml
+++ b/app/views/absent_contacts/_absentContact_contents.html.haml
@@ -1,6 +1,6 @@
 .infoArea
-  -# 右側のヘッダー（選択したクラス、機能選択ボタン）
-  =render 'contact_books/headButtonLinks'
+  .infoArea__infoHead
+    =render 'contact_books/headButtonLinks'
 
   .infoArea__infoMenu
     %ul.breadCrumbsLink
