--- a/app/views/contact_books/_contactBook_contents_index.haml
+++ b/app/views/contact_books/_contactBook_contents_index.haml
@@ -1,5 +1,6 @@
 .infoArea
-  =render 'contact_books/headButtonLinks'
+  .infoArea__infoHead
+    =render 'contact_books/headButtonLinks'
 
   .infoArea__infoMenu
     %ul.breadCrumbsLink
