--- a/app/views/contact_books/_contactBook_contents_show.html.haml
+++ b/app/views/contact_books/_contactBook_contents_show.html.haml
@@ -1,9 +1,6 @@
 .infoArea
   .infoArea__infoHead
-    .infoArea__infoHead__userRoom
-      %h6 選択中のクラス
-      .infoArea__infoHead__userRoom__roomName
-        = @room.number
+    =render 'contact_books/headButtonLinks'
     .infoArea__infoHead__headBox
       %ul.headBtns
         %li.headBtn
