--- a/app/views/letters/_letter_contents.html.haml
+++ b/app/views/letters/_letter_contents.html.haml
@@ -1,5 +1,6 @@
 .infoArea
-  =render 'contact_books/headButtonLinks'
+  .infoArea__infoHead
+    =render 'contact_books/headButtonLinks'
 
   .infoArea__infoMenu
     %ul.breadCrumbsLink
