--- a/app/views/rooms/_room_contents_index.html.haml
+++ b/app/views/rooms/_room_contents_index.html.haml
@@ -1,16 +1,6 @@
 .infoArea
   .infoArea__infoHead
-    .infoArea__infoHead__userschool
-      %h6 学校名
-      .infoArea__infoHead__userschool__schoolName
-        = current_user.school.school_name
-    .infoArea__infoHead__userRoom
-      %h6 あなたのクラス
-      .infoArea__infoHead__userRoom__roomName
-        - if current_user.room_id?
-          = current_user.room.number
-        - else
-          クラス登録
+    =render 'contact_books/headButtonLinks'
     .infoArea__infoHead__headBox
   .infoArea__infoMenu
     %ul.breadCrumbsLink
