--- a/app/views/absent_contacts/_AbsentContactBoxTable.html.haml
+++ b/app/views/absent_contacts/_AbsentContactBoxTable.html.haml
@@ -1,6 +1,6 @@
 .AbsentContactBoxTable
   .contactDateHead
-    いつ（欠席等）
+    事実発生日
   .contactNameHead
     名前
   .contactKindHead
@@ -9,8 +9,6 @@
     理由
   .contactAfterContactHead
     放課後連絡
-  .contactConfirmHead
-    送信
   .contact_T_ConfirmHead
     先生確認
   - if current_user && !current_user.admin?
