--- a/app/views/contact_books/_headButtonLinks.html.haml
+++ b/app/views/contact_books/_headButtonLinks.html.haml
@@ -11,3 +11,12 @@
     %h6 あなたのクラス
     .infoArea__infoHead__userRoom__roomName
       = current_user.room.number
+.infoArea__infoHead__headBox
+  %ul.headBtns
+    %li.headBtn
+      = link_to '欠席連絡', room_absent_contacts_path, class: "HeadBtn abscentContact"
+    %li.headBtn
+      = link_to '連絡帳', room_contact_books_path, class: "HeadBtn contactBook"
+    %li.headBtn
+      = link_to '配布手紙', room_letters_path, class: "HeadBtn letters"
+          
