small debug and refactoring

--- a/app/assets/stylesheets/modules/_contact_books.scss
+++ b/app/assets/stylesheets/modules/_contact_books.scss
@@ -89,6 +89,7 @@
       font-weight: bolder;
       overflow: hidden;
       overflow-y: scroll;
+      padding: 20px 0;
       .RoomIndex {
         .userRoomRegistration {
           display: flex;
