--- a/app/assets/stylesheets/modules/_letters.scss
+++ b/app/assets/stylesheets/modules/_letters.scss
@@ -47,34 +47,47 @@
     }
   }
   &__lettersBox {
-    width: 500px;
     display: flex;
     align-items: center;
     flex-direction: column;
+    text-align: right;
+    padding-right: 250px;
     .Letter {
+      width: 700px;
       margin: 20px;
-      text-align: right;
+      display: flex;
       .letterFile {
+        display: block;
+        width: 700px;
         font-size: 25px;
         color: black;
         text-decoration: none;
+
         margin-right: 20px;
       }
       .letterFile:hover {
         text-decoration: underline;
       }
+      .distributeday {
+        font-size: 12px; 
+        line-height: 40px;
+        width: 80px;
+      }
       .releasedAtBox {
-        display: inline-block;
-        width: 110px;
+        font-size: 12px; 
+        line-height: 40px;
+        width: 120px;
       }
       .DeleteBtn {
+        display: block;
+        width: 50px;
         font-size: 20px;
         color: black;
         text-decoration: none;
         margin-left: 20px;
       }
       .DeleteBtn:hover {
-        text-decoration: underline;
+        color: #aaaaaa;
       }
     }
   }
