--- a/app/views/absent_contacts/_absentContact_contents.html.haml
+++ b/app/views/absent_contacts/_absentContact_contents.html.haml
@@ -5,11 +5,7 @@
   .infoArea__infoMenu
     %ul.breadCrumbsLink
       %li
-        = link_to 'クラス選択', root_path, class: "roomSelectBtn"
-      %li
-        %i.fa.fa-chevron-right
-      %li
-        = link_to '連絡帳', room_contact_books_path, class: "contactBookSelectBtn"
+        = link_to 'HOME', root_path, class: "roomSelectBtn"
       %li
         %i.fa.fa-chevron-right
       %li
