--- a/app/views/contact_books/_contactBook_contents_index.haml
+++ b/app/views/contact_books/_contactBook_contents_index.haml
@@ -5,7 +5,7 @@
   .infoArea__infoMenu
     %ul.breadCrumbsLink
       %li
-        = link_to 'クラス選択', root_path, class: "roomSelectBtn"
+        = link_to 'HOME', root_path, class: "roomSelectBtn"
       %li
         %i.fa.fa-chevron-right
       %li
