--- a/app/views/contact_books/_contactBook_contents_show.html.haml
+++ b/app/views/contact_books/_contactBook_contents_show.html.haml
@@ -1,11 +1,11 @@
 .infoArea
   .infoArea__infoHead
-  =render 'contact_books/headButtonLinks'
+    =render 'contact_books/headButtonLinks'
 
   .infoArea__infoMenu
     %ul.breadCrumbsLink
       %li
-        = link_to 'クラス選択', root_path, class: "roomSelectBtn"
+        = link_to 'HOME', root_path, class: "roomSelectBtn"
       %li
         %i.fa.fa-chevron-right
       %li
