--- a/app/views/rooms/_room_contents_index.html.haml
+++ b/app/views/rooms/_room_contents_index.html.haml
@@ -24,8 +24,6 @@
   .infoArea__infoMenu
     %ul.breadCrumbsLink
       %li
-        = link_to 'クラス選択', root_path, class: "roomSelectBtn"
+        = link_to 'HOME', root_path, class: "roomSelectBtn"
       %li
         %i.fa.fa-chevron-right
-      %li
-        %p 機能選択
