pdf upload settings

--- a/app/assets/stylesheets/modules/_devise.scss
+++ b/app/assets/stylesheets/modules/_devise.scss
@@ -61,6 +61,10 @@
     width: 400px;
   }
 
+  #SchoolLogin {
+    display: none;
+  }
+
   .UserWrapper {
     height: calc( 100vh - 115px );
     overflow: hidden;
